--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -21,6 +21,7 @@
     color: blanchedalmond;
     text-align: center;
     font-size: 20px;
+    font-style: oblique;
   
 }
 
@@ -37,6 +38,7 @@
      color: blanchedalmond;
      text-align: center;
      font-size: 20px;
+     font-style: oblique;
     
 }
 
@@ -95,41 +97,52 @@
     position: absolute;
 }
 
-.left-border {
-    background-color: rgb(206, 206, 206);
-    height: 100%;
-    width: 10%;
-    margin-right: 90%;
-    position: absolute;
-    position: absolute;
-    display: flex;
-    align-items: center;
-}
 
-.right-border {
-    background-color: rgb(206, 206, 206);
-    height: 100%;
-    width: 10%;
-    margin-left: 90%;
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   
-}
+
 
 
 .kirby {
     width: 80px;
     position: fixed;
     top: 20%;
-    margin-left: 16%;
-    
-   
-    
-   
+    padding-right: 30%;
 }
 
+.mario {
+    width: 80px;
+    position: fixed;
+    top: 80%;
+    margin-left: 5%;
+  
+}
+
+.link{
+    width: 120px;
+    position: relative;
+    margin-left: 60%;
+    top: 16%;
+}
+
+.minmin {
+    width: 120px;
+    position: fixed;
+    top: 12%;
+    transform: rotate(354deg)
+}
+
+.charizard {
+    width: 120px;
+    position: fixed;
+    top: 5%;
+    padding-left: 35%;
+}
+
+.sheik {
+    position:fixed;
+    width: 110px;
+    top: 65%;
+    padding-right: 30%;
+}
 
 @keyframes gradient {
     0% {
