--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,9 @@ body {
   height: 100%;
   width: 100%;
   margin: 0;
+  background: linear-gradient(-45deg, #16191b, #16191b);
   overflow: auto;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
