--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   background: linear-gradient(-45deg, #16191b, #16191b);
   overflow: auto;
+  color: blanchedalmond;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
