added fetch for moves etc..

--- a/src/components/Smash4Card/smash4card.css
+++ b/src/components/Smash4Card/smash4card.css
@@ -4,5 +4,5 @@
     justify-content: center;
     width: 200px;
     text-align: center;
-    background-color: rgb(79, 80, 129);
+    font-style: oblique;
 }
